set up deployment workflow

--- a/angular.json
+++ b/angular.json
@@ -116,6 +116,11 @@
               "devServerTarget": "portfolio:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+          }
         }
       }
     }
